# trikin_astar

./: README.md
src/Trikin_Astar/: CMakeLists.txt  package.xml
src/Trikin_Astar/config/: env.rviz
src/Trikin_Astar/include/: Trikin_Astar.h  pc_processor.h
src/Trikin_Astar/launch/: trik_planner.launch
src/Trikin_Astar/reference/: RRT.cpp  chan2obj.py  chan2off.py  main_test.cpp  mesh_generator.cpp
src/Trikin_Astar/src/: Trikin_Astar.cpp  advance_map.off  out.off  pc_processor.cpp
src/visualization_tools/launch/: visualization_tools.launch
